chore(deploy): JFR and NMT on demand, not in JAVA_OPTS
The GC log is enough to notice a heap growing; a JFR recording is
started with jcmd when it does, and native memory tracking with a
restart of one instance when RSS grows without the heap. The README
shows both.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Signed-off-by: Olav Gjerde <olav@intellistream.ai>